tests/snapshots/snapshot_tests__python-uv-plan.snap
---
source: tests/snapshot_tests.rs
expression: plan
---
{
  "steps": [
    {
      "name": "packages:mise",
      "inputs": [
        {
          "image": "ghcr.io/railwayapp/railpack-builder:latest"
        }
      ],
      "commands": [
        {
          "path": "/mise/shims"
        },
        {
          "path": "/etc/mise/config.toml",
          "name": "mise.toml",
          "customName": "create mise config"
        },
        {
          "cmd": "mise install",
          "customName": "install mise packages: python, uv"
        }
      ],
      "assets": {
        "mise.toml": "[tools.python]\nversion = \"3.13.0.0\"\n\n[tools.uv]\nversion = \"latest.0.0\"\n"
      },
      "variables": {
        "MISE_CACHE_DIR": "/mise/cache",
        "MISE_CONFIG_DIR": "/mise",
        "MISE_DATA_DIR": "/mise",
        "MISE_IDIOMATIC_VERSION_FILE_ENABLE_TOOLS": "python,node,ruby,elixir,go,java,yarn",
        "MISE_INSTALLS_DIR": "/mise/installs",
        "MISE_NODE_VERIFY": "false",
        "MISE_PARANOID": "1",
        "MISE_PYTHON_COMPILE": "false",
        "MISE_SHIMS_DIR": "/mise/shims",
        "MISE_TRUSTED_CONFIG_PATHS": "/app"
      }
    },
    {
      "name": "install",
      "inputs": [
        {
          "step": "packages:mise"
        }
      ],
      "commands": [
        {
          "src": "pyproject.toml",
          "dest": "pyproject.toml"
        },
        {
          "src": "uv.lock",
          "dest": "uv.lock"
        },
        {
          "path": "/root/.local/bin"
        },
        {
          "path": "/app/.venv/bin"
        },
        {
          "cmd": "uv sync --locked --no-dev --no-install-project"
        }
      ],
      "variables": {
        "PIP_DEFAULT_TIMEOUT": "100",
        "PIP_DISABLE_PIP_VERSION_CHECK": "1",
        "PYTHONDONTWRITEBYTECODE": "1",
        "PYTHONFAULTHANDLER": "1",
        "PYTHONHASHSEED": "random",
        "PYTHONUNBUFFERED": "1",
        "UV_CACHE_DIR": "/opt/uv-cache",
        "UV_COMPILE_BYTECODE": "1",
        "UV_LINK_MODE": "copy",
        "UV_PYTHON_DOWNLOADS": "never",
        "VIRTUAL_ENV": "/app/.venv"
      },
      "caches": [
        "uv"
      ]
    },
    {
      "name": "build",
      "inputs": [
        {
          "step": "install"
        },
        {
          "include": [
            "."
          ],
          "local": true
        }
      ],
      "commands": [
        {
          "cmd": "uv sync --locked --no-dev --no-editable"
        }
      ],
      "secrets": [
        "*"
      ]
    }
  ],
  "caches": {
    "uv": {
      "directory": "/opt/uv-cache",
      "type": "shared"
    }
  },
  "deploy": {
    "base": {
      "image": "ghcr.io/railwayapp/railpack-runtime:latest"
    },
    "inputs": [
      {
        "include": [
          "/mise/shims",
          "/mise/installs",
          "/usr/local/bin/mise",
          "/etc/mise/config.toml",
          "/root/.local/state/mise"
        ],
        "step": "packages:mise"
      },
      {
        "include": [
          "/app/.venv"
        ],
        "step": "build"
      },
      {
        "exclude": [
          ".venv"
        ],
        "include": [
          "."
        ],
        "step": "build"
      }
    ],
    "startCommand": "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}",
    "variables": {
      "PIP_DEFAULT_TIMEOUT": "100",
      "PIP_DISABLE_PIP_VERSION_CHECK": "1",
      "PYTHONDONTWRITEBYTECODE": "1",
      "PYTHONFAULTHANDLER": "1",
      "PYTHONHASHSEED": "random",
      "PYTHONUNBUFFERED": "1"
    }
  }
}
